# youtube_sentiment

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
youtube_sentiment/: __init__.py  youtube.py
